--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroui/react": "^2.8.5",
     "axios": "^1.13.2",
     "framer-motion": "^12.23.24",
+    "mongodb": "^7.0.0",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
